go-web-chart/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  selector:
    app: go-web-app
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
